<resources>
    <string name="app_name">ReminisceTicketing</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_value">Get ready to let loose and immerse yourself in an unforgettable musical experience at our electrifying Music Party! Join us as we turn up the volume, creating a pulsating atmosphere that will make your heart race and your feet move to the rhythm. With a lineup of talented DJs and live performers, we\'re bringing the hottest beats and chart-topping hits across a variety of genres.\nStep onto the dance floor and feel the energy surge through your veins as the speakers blast vibrant tunes. Our state-of-the-art sound system.
 </string>
    <string name="title_activity_scan_result">ScanResult</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reminisce_scanner">Reminisce Scanner</string>
    <string name="enter_your_details_below_to_scan_tickets">Enter your details below to scan tickets.</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>

    <string name="request">Request</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="notification_s">Notification\'s</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="event_list">Event List</string>
    <string name="search">Search</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="valid_ticket">Valid Ticket \n Please allow the patron to enter</string>
    <string name="musical_merriments">Musical Merriments</string>
    <string name="description">Description</string>
    <string name="reset_your_password">Enter your email to reset your password</string>
    <string name="log_in">Log in</string>
    <string name="scan_tickets">Scan Tickets</string>
    <string name="home">Home</string>

   <string name="invalid_data">Invalid data</string>
   <string name="invalid_ticket">Invalid ticket</string>
   <string name="ticket_Invalid_Already_scanned_in">Ticket Invalid\n
Already scanned in</string>
   <string name="ticket_Invalid_Not_found_in_the_system"> Ticket Invalid\n
   Not found in the system</string>



</resources>