<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Forgot Password"
                android:textColor="@color/black"
                android:textFontWeight="800"
                android:textStyle="bold"
                android:fontFamily="@font/nunitosans_10pt_bold"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:textFontWeight="400"
                android:fontFamily="@font/nunitosans_10pt_bold"
                android:text="@string/reset_your_password"
                android:textColor="@color/decription_txt_color"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="Email"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:fontFamily="@font/nunitosans_7pt_regular"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="horizontal"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="Enter email" />

            </LinearLayout>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_8sdp"
                android:hint="@string/enter_email"
                android:background="@drawable/bg_rounded_white">

            </com.google.android.material.textfield.TextInputEditText>

            <Button
                android:id="@+id/forget_request"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/request"
                android:layout_marginTop="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/bg_rounded_blue">

            </Button>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/log_in"
                android:textColor="#2F34B2"
                android:fontFamily="@font/nunitosans_7pt_regular"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>